<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:padding="16dp">

    <!-- Top Bar -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp">

        <!-- Back Button -->
        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/arrow_left" />

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/profile_title"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picture_label"
            android:layout_marginStart="16dp"
            android:layout_centerVertical="true"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/profile_photo"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="5dp"
            android:scaleType="centerCrop"
            android:layout_toStartOf="@+id/arrow_right_picture"
            android:src="@drawable/avatar_icon" />

        <ImageView
            android:id="@+id/arrow_right_picture"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_next" />
    </RelativeLayout>

    <!-- Name -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name_label"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/arrow_right_name"
            android:text="tr***42"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/arrow_right_name"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_next" />
    </RelativeLayout>

    <!-- Profile -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/arrow_right_profile"
            android:text="@string/profile_placeholder"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/arrow_right_profile"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_next" />
    </RelativeLayout>

    <!-- Gender -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender_label"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/arrow_right_gender"
            android:text="@string/gender_placeholder"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/arrow_right_gender"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_next" />
    </RelativeLayout>

    <!-- Email -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_label"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/arrow_right_email"
            android:text="tramnguyen1642@gmail.com"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/arrow_right_email"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_next" />
    </RelativeLayout>

    <!-- Phone Number -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:layout_marginTop="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number_label"
            android:textSize="16sp"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@+id/arrow_right_phone_number"
            android:text="@string/phone_number_placeholder"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray" />

        <ImageView
            android:id="@+id/arrow_right_phone_number"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_next" />
    </RelativeLayout>

    <!-- Green Lock Message -->
    <TextView
        android:id="@+id/lock_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lock_message"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="14sp" />
    <Button
        android:id="@+id/updateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/update_profile_button"
        android:backgroundTint="@color/red"
        />

    <!-- Profile Avatar Usage Info -->
</LinearLayout>
